tests/NormalTests/paczka1/fuzzy1/49860981.err
Error in line 6: cVgO33NoWRs S772 58,9
Error in line 10: A490 A490 45,9
Error in line 19: 0UuN3OO6z S411 62,1
Error in line 21: jl7Y S411 93,0
Error in line 30: jl7Y A329 65,7
Error in line 33: jl7Y S411 52,2
